# chainless

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  README.md  help.md  main.agentx  pyproject.toml  run_tests.sh
apps/website/: .env.public  .envx.public  README.md  envx.config.json  envx.meta.json  package.json  pnpm-lock.yaml  source.config.ts
apps/website/app/: global.css  layout.config.tsx  layout.tsx
apps/website/components/: WhyDevelopersLove.tsx  container.tsx  footer.tsx  hero-section.tsx  logo.tsx
apps/website/constants/: config.ts  icons.tsx
apps/website/lib/: envx.ts  source.ts
apps/website/types/: envx.ts  index.ts
docs/: .info  docs.json  installation.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/concepts/: agent.mdx  taskflow.mdx  tool.mdx
docs/examples/: first_agent.mdx  research_report_flow.mdx
examples/: eserver.py  example1.py  example2.py  example3.py
examples/depracted/: example1.py
examples/pcai/: .info  main.py  prompts.py
examples/pcai/tools/: __init__.py  execute_commands.py
examples/sitesage/: .env.example  .gitignore  README.md  pyproject.toml
examples/sitesage/src/: main.py  types.py
lib_test/: main.py  pyproject.toml
src/chainless/: __init__.py  config.py  logger.py  memory.py  messages.py
src/chainless/_schemas/: __init__.py
src/chainless/_utils/: __init__.py  _utility.py  _validate_callback.py  _validate_name.py  callback_utils.py  error_wrapper.py  exception.py  printing.py  schema_utils.py  (+2 more)
tests/: test_advanced_flow.py  test_chainless.py  test_taskflow.py
(+47 files in other folders)
